# project-tri-force

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FDA_POSITIONING.md  Makefile  README.md  SECURITY.md  cortaloom-spec.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: claude_task.md
backend/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_indexes.py  003_add_audit_log.py  004_add_multitenancy.py  005_add_outcome_tracking.py  006_add_baa_tracking.py  007_add_stripe_billing.py  008_add_verticals_and_schema_version.py  009_add_tiered_billing.py  010_add_budget_cap_and_alerts.py  011_add_payer_policies.py  012_add_is_admin.py  013_add_payer_to_narratives.py  014_add_policy_chunks_citations_graph.py  015_add_tenant_created_at_indexes.py  016_add_cases_versions_cpt.py
backend/app/: config.py  main.py
backend/app/api/v1/: admin.py  analytics.py  billing.py  cases.py  extraction.py  graph.py  ingest.py  payer_policy.py  policy_docs.py  router.py  share.py
backend/app/core/: audit.py  db.py  logging.py  rate_limit.py  security.py
backend/app/models/: database.py  schemas.py
backend/app/services/: dicom_service.py  knowledge_graph.py  notifications.py  pdf_parser.py  phi_scrubber.py  policy_ingestion.py  storage.py
backend/app/services/llm/: extraction.py  narrative.py  prompts.py
backend/tests/: conftest.py  test_admin_auth.py  test_analytics.py  test_billing.py  test_dicom_service.py  test_e2e_data_flow.py  test_error_handling.py  test_health.py  test_multitenancy.py  test_narrative_modes.py  test_pdf_parser.py  test_phi_scrubber.py  test_phi_scrubber_integration.py  test_rate_limiting.py  test_stripe_webhook.py  test_upload_pipeline.py
backend/tests/fixtures/: clinical_note_complete.txt  clinical_note_hip.txt  clinical_note_minimal.txt  clinical_note_with_phi.txt  robotic_report_mako.txt
docs/: README.md  competitive-landscape.md  compliance-brief.md  payer-intelligence-system.md  payer-policy-brief.md  platform-roadmap.md  qa-framework.md  synthetic-demo-data.json  tri-force-strategy.md  ux-brief.md
frontend/: .env.example  package-lock.json  package.json
(+53 files in other folders)
