[project]
name = "triforce-backend"
version = "0.1.0"
description = "CortaLoom: Universal B2B AI Data Middleware for Clinical Data Normalization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "python-multipart",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector>=0.3",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydicom>=2.4",
    "pypdf>=4.0",
    "langchain>=0.3",
    "langchain-anthropic",
    "presidio-analyzer",
    "presidio-anonymizer",
    "boto3",
    "httpx",
    "reportlab",
    "stripe",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
